[package]
name = "rustyrays"
version = "0.1.0"
authors = ["Kristian Theilgaard <kristian.theilgaard@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glium = "0.25.1"

[[bin]]
name = "rr"
path = "src/main.rs"