[package]
name = "rustyrays"
version = "0.1.0"
authors = ["Kristian Theilgaard <kristian.theilgaard@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glutin = "0.22.0-alpha3"

[[bin]]
name = "rr"
path = "src/main.rs"